# optiga-nbt-example-cott-flask

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.rst  openapi.yaml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.license
docs/: conf.py  index.rst
src/cott/: __init__.py  py.typed
src/cott/server/: __init__.py  __main__.py  cache.py  keystore.py
src/cott/server/templates/: index.html
tests/: test_cott.py  test_server.py
